--- a/_docs/bibtex/truong2015_interspeech.bib
+++ b/_docs/bibtex/truong2015_interspeech.bib
@@ -1,5 +1,5 @@
 @inproceedings{truong2015_interspeech,
-author = {Quoc Truong Do, Shinnosuke Takamichi, Sakriani Sakti, Graham Neubig, Tomoki Toda, Satoshi Nakamura},
+author = {Q. T. Do, S. Takamichi, S. Sakti, G. Neubig, T. Toda, S. Nakamura},
 booktitle = {INTERSPEECH},
 title = {Preserving Word-level Emphasis in Speech-to-speech Translation using Linear Regression {HSMMs}},
 year = {2015}
