--- a/_docs/bibtex/truong2014_cocosda.bib
+++ b/_docs/bibtex/truong2014_cocosda.bib
@@ -1,9 +1,8 @@
 @inproceedings{truong2014_ococosda,
 address = {Phuket, Thailand},
-author = {Quoc Truong Do and Sakriani Sakti and Graham Neubig and Tomoki Toda and Satoshi Nakamura},
-booktitle = {COCOSDA},
+author = {Q. T. Do and S. Sakti and G. Neubig and T. Toda and S. Nakamura},
+booktitle = {Proceedings of COCOSDA},
 month = {September},
 title = {Collection and Analysis of a Japanese-English Emphasized Speech Corpus},
 year = {2014}
 }
-
