--- a/_docs/bibtex/truong2015_wfst.bib
+++ b/_docs/bibtex/truong2015_wfst.bib
@@ -1,5 +1,5 @@
 @inproceedings{Truong_2015_wfst,
-author = {Quoc Truong Do, Satoshi Nakamura, Marc Delcroix, Takaaki Hori},
+author = {Q. T. Do, S. Nakamura, M. Delcroix, T. Hori},
 booktitle = {ICASSP},
 title = {WFST-Based Structural Classification Integrating {DNN} Acoustic Features and {RNN} Language Features for Speech Recognition},
 year = {2015}
