--- a/_docs/CV/cv.tex
+++ b/_docs/CV/cv.tex
@@ -2,6 +2,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[vietnam]{babel}
+\usepackage{hyperref}
 
 \oddsidemargin -.5in
 \evensidemargin -.5in
@@ -10,19 +11,19 @@
 \parsep=0in
 % if using pdflatex:
 %\setlength{\pdfpagewidth}{\paperwidth}
-%\setlength{\pdfpageheight}{\paperheight} 
+%\setlength{\pdfpageheight}{\paperheight}
 
 \newenvironment{list1}{
   \begin{list}{\ding{113}}{%
       \setlength{\itemsep}{0in}
       \setlength{\parsep}{0in} \setlength{\parskip}{0in}
-      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in}
       \setlength{\leftmargin}{0.17in}}}{\end{list}}
 \newenvironment{list2}{
   \begin{list}{$\bullet$}{%
       \setlength{\itemsep}{0in}
       \setlength{\parsep}{0in} \setlength{\parskip}{0in}
-      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in}
       \setlength{\leftmargin}{0.2in}}}{\end{list}}
 \newcommand{\tab}{\hspace*{2em}}
 \begin{document}
@@ -33,10 +34,10 @@
 \section{\sc Contact Information}
 \vspace{.05in}
 \begin{tabular}{@{}p{2in}p{4in}}
-Augmented Human Communication Laboratoy            & {\it Tel:}  +81-743-72-5264 \\            
-Graduate School of Information Science   & {\it Fax:}    +81-743-72-5269 \\         
-Nara Institute of Science and Technology & {\it E-mail:}  do.truong.dj3@is.naist.jp\\       
-  & 	%{\it WWW:} www.stat.cmu.edu/\verb+~+paciorek \\     
+Augmented Human Communication Laboratoy            & {\it Tel:}  +81-743-72-5264 \\
+Graduate School of Information Science   & {\it Fax:}    +81-743-72-5269 \\
+Nara Institute of Science and Technology & {\it E-mail:}  do.truong.dj3@is.naist.jp\\
+  & 	%{\it WWW:} www.stat.cmu.edu/\verb+~+paciorek \\
 \end{tabular}
 
 \section{\sc Persional Information}
@@ -49,18 +50,19 @@ Nara Institute of Science and Technology & {\it E-mail:}  do.truong.dj3@is.naist
 \section{\sc Research Interests}
 My interested research topic is related to speech such as automatic speech recognition, speech synthesis, and speech translation.
 \section{\sc Education Background}
-2014:\tab \tab \hspace{1.1em}\textbf{Internship at NTT research laboratory} \\
-2013 - now: \tab \textbf{Master student of Nara Institute of Information and Science} \\
-2012:\tab \tab \hspace{0.7em} \textbf{2 months Summer Internship at NAIST}\\
-2011 - 2012:\tab \textbf{Research student at Group of Speech Recognition and Synthesis at Pattern Recognition and Knowledge Engineering (IOIT)}\\
-2009 - 2013:\tab \textbf{Undergradutate Student of VNU - University of Engineering and Technology}\\
+2015 - now:\tab \hspace{0.3em}\textbf{Ph.D. student at NAIST} \\
+2014:\tab \tab \hspace{1.1em}Internship at NTT research laboratory \\
+2013 - 2015: \tab Master student at Nara Institute of Information and Science \\
+2012:\tab \tab \hspace{0.7em} 2 months Summer Internship at NAIST\\
+2011 - 2012:\tab Research student at Group of Speech Recognition and Synthesis at Pattern Recognition and Knowledge Engineering (IOIT)\\
+2009 - 2013:\tab Undergradutate Student of VNU - University of Engineering and Technology\\
 \section{\sc Research \& Achievements}
 \begin{list2}
-\item I started doing research about speech recognition as a research student at IOIT since I was 2nd year undergraduate. During that period, I have published, and attended some domestic conferences in Vietnam.
-\item Since 2013 as a master student, I have studied more deeply about speech recognition, synthesis, and also having some basic knowledge about machine translation.
-\item I'm familiar with Kaldi speech recognition, HTS speech synthesis, and Moses machine translation toolkit.
-\item During my master period, I have published 3 international papers to O-COCOSDA 2014, ICASSP 2015, and INTERSPEECH 2015.
-\item Award ISCA grant in 2015 for my paper in Interspeech conferences.
+\item Familiar with Kaldi speech recognition, HTS speech synthesis, and Moses machine translation toolkits.
+\item Published 5 international papers to IWSLT 2015, ASRU 2015, ICASSP 2015, and INTERSPEECH 2015, O-COCOSDA 2014.
+\item Awards an ISCA grant in 2015 for my paper in Interspeech conferences.
+\item Awards a best student prize for master course at NAIST.
+\item Awards a best project prize in Creative and International Competitiveness Project (CICP) 2015 hosted by NAIST (see \url{truongdo.com/cicp}).
 \end{list2}
 
 \section{\sc Computer Skills }
@@ -69,11 +71,11 @@ My interested research topic is related to speech such as automatic speech recog
 \item Languages: Java, C++, PHP, Python, Shell scripting.
 \item Networking: Socket, Fundamental knowledge about Network, Router configuration.
 \item Software development skills: Web, Android.
-\item I love programming, and developing toolkit that shared my knowledge to the others.
+\item I love programming, and developing toolkits to share my knowledge to others.
 \end{list2}
 \section{\sc Foreign Languages}
 \begin{list2}
-\item English: TOEIC 800.
+\item English: TOEIC 850.
 \end{list2}
 \section{\sc Study Results}
 \begin{list2}
@@ -83,18 +85,16 @@ My interested research topic is related to speech such as automatic speech recog
 
 \section{\sc Extra-curricular Activities}
 \begin{list2}
-\item Leadership: 
+\item Leadership:
 \begin{list2}
-\item I am a Member of the Executive Committee of HoChiMinh Communist Youth Union of the Faculty of Information and Technology - University of Engineering and Technology (UET).
-\vspace{1em}
-\item I used to be class Youth Union secretary at the 11-12th grade
+\item Member of the Executive Committee of HoChiMinh Communist Youth Union of the Faculty of Information and Technology - University of Engineering and Technology (UET).
 \vspace{1em}
 \end{list2}
-\item Volunteer: I have participated in some charity activities at UET, Gifts for the Poor.
+\item Volunteer: Participated in some charity activities at UET, Gifts for the Poor.
 \vspace{1em}
-\item Sports: Football, Badminton.
+\item Sports: football, badminton, table tennis.
 \end{list2}
-%\section{\sc Honors and Awards} 
+%\section{\sc Honors and Awards}
 %National Science Foundation Graduate Research Fellowship, 1996
 %
 %%\vspace*{-2.5mm}
