--- a/_docs/bibtex/truong2017_IEEE_emphasis.bib
+++ b/_docs/bibtex/truong2017_IEEE_emphasis.bib
@@ -1,8 +1,12 @@
-@inproceedings{do16isattention,
-    title = {Transferring Emphasis in Speech Translation Using Hard-Attentional Neural Network Models},
-    author = {Quoc Truong Do and Sakriani Sakti and Graham Neubig and Satoshi Nakamura},
-    booktitle = {17th Annual Conference of the International Speech Communication Association (InterSpeech 2016)},
-    address = {San Francisco, California, USA},
-    month = {September},
-    year = {2016}
+@article{do17_emphasis,
+  author = {Quoc Truong Do and Tomoki Toda and Graham Neubig and Sakriani Sakti and Satoshi Nakamura},
+  title={Preserving Word-Level Emphasis in Speech-to-Speech Translation},
+  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  year = {2017},
+  month={March},
+  volume={25},
+  number={3},
+  pages={544-556},
+  doi={10.1109/TASLP.2016.2643280}
 }
+
