--- a/_docs/CV/cv.tex
+++ b/_docs/CV/cv.tex
@@ -1,7 +1,7 @@
 \documentclass[margin,line]{res}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[vietnam]{babel}
+%\usepackage[vietnam]{babel}
 \usepackage{hyperref}
 
 \oddsidemargin -.5in
@@ -36,7 +36,7 @@
 \begin{tabular}{@{}p{2in}p{4in}}
 Augmented Human Communication Laboratoy            & {\it Tel:}  +81-743-72-5264 \\
 Graduate School of Information Science   & {\it Fax:}    +81-743-72-5269 \\
-Nara Institute of Science and Technology & {\it E-mail:}  do.truong.dj3@is.naist.jp\\
+Nara Institute of Science and Technology & {\it E-mail:}  truongdq54@gmail.com\\
   & 	%{\it WWW:} www.stat.cmu.edu/\verb+~+paciorek \\
 \end{tabular}
 
@@ -58,24 +58,27 @@ My interested research topic is related to speech such as automatic speech recog
 2009 - 2013:\tab Undergradutate Student of VNU - University of Engineering and Technology\\
 \section{\sc Research \& Achievements}
 \begin{list2}
-\item Familiar with Kaldi speech recognition, HTS speech synthesis, and Moses machine translation toolkits.
-\item Published 5 international papers to IWSLT 2015, ASRU 2015, ICASSP 2015, and INTERSPEECH 2015, O-COCOSDA 2014.
+\item 1 IEEE/ACM TASLP journal paper.
+\item 10 international conference papers (8 first author and 2 co-authors papers) accepted at Interspeech, ICASSP, ASRU, IWSLT.
+\item 5 domestic conference papers (Japan).
+\item IEEE Signal Processing Society (SPS) Japan Student Journal Paper Award 2017.
 \item Awards an ISCA grant in 2015 for my paper in Interspeech conferences.
 \item Awards a best student prize for master course at NAIST.
-\item Awards a best project prize in Creative and International Competitiveness Project (CICP) 2015 hosted by NAIST (see \url{truongdo.com/cicp}).
+\item Awards a best project prize in Creative and International Competitiveness Project (CICP) 2015 hosted by NAIST.
+\item Familiar with Kaldi speech recognition, HTS speech synthesis, Moses machine translation toolkits, and deep learning.
 \end{list2}
 
 \section{\sc Computer Skills }
 \begin{list2}
-\item Systems: Linux Operating System (Ubuntu, Debian).
+\item Systems: Linux Operating System, Windows.
 \item Languages: Java, C++, PHP, Python, Shell scripting.
-\item Networking: Socket, Fundamental knowledge about Network, Router configuration.
-\item Software development skills: Web, Android.
+\item Software development skills: Web, Android, back-ends.
 \item I love programming, and developing toolkits to share my knowledge to others.
 \end{list2}
 \section{\sc Foreign Languages}
 \begin{list2}
-\item English: TOEIC 850.
+\item English: TOEIC 890.
+\item Japanese: Daily-life conversation level.
 \end{list2}
 \section{\sc Study Results}
 \begin{list2}
