--- a/_docs/CV/cv.tex
+++ b/_docs/CV/cv.tex
@@ -34,7 +34,7 @@
 \section{\sc Contact Information}
 \vspace{.05in}
 \begin{tabular}{@{}p{2in}p{4in}}
-Augmented Human Communication Laboratoy            & {\it Tel:}  +81-743-72-5264 \\
+Augmented Human Communication Laboratoy            & {\it Tel:}  +8180-4760-2430 \\
 Graduate School of Information Science   & {\it Fax:}    +81-743-72-5269 \\
 Nara Institute of Science and Technology & {\it E-mail:}  truongdq54@gmail.com\\
   & 	%{\it WWW:} www.stat.cmu.edu/\verb+~+paciorek \\
@@ -48,36 +48,37 @@ Nara Institute of Science and Technology & {\it E-mail:}  truongdq54@gmail.com\\
 \textbf{Present Address}:	8916-5 Takayama-cho, Ikoma, Nara 630-0192, Japan	\\
 
 \section{\sc Research Interests}
-My interested research topic is related to speech such as automatic speech recognition, speech synthesis, and speech translation.
+My interested research topic is related to AI technologies, especially, related to speech and natural language processing such as automatic speech recognition, speech synthesis, and speech translation. Apart from doing research, I am experienced in developing mobile softwares and deploying cloud service applications.
 \section{\sc Education Background}
+2018:\tab \tab \hspace{1.0em}Internship at the University of Edinburgh \\
 2015 - now:\tab \hspace{0.3em}\textbf{Ph.D. student at NAIST} \\
 2014:\tab \tab \hspace{1.1em}Internship at NTT research laboratory \\
-2013 - 2015: \tab Master student at Nara Institute of Information and Science \\
+2013 - 2015:\tab Master student at Nara Institute of Information and Science \\
 2012:\tab \tab \hspace{0.7em} 2 months Summer Internship at NAIST\\
 2011 - 2012:\tab Research student at Group of Speech Recognition and Synthesis at Pattern Recognition and Knowledge Engineering (IOIT)\\
 2009 - 2013:\tab Undergradutate Student of VNU - University of Engineering and Technology\\
 \section{\sc Research \& Achievements}
 \begin{list2}
-\item 1 IEEE/ACM TASLP journal paper.
+\item 2 IEEE/ACM TASLP journal papers.
 \item 10 international conference papers (8 first author and 2 co-authors papers) accepted at Interspeech, ICASSP, ASRU, IWSLT.
-\item 5 domestic conference papers (Japan).
+\item 5 first-author domestic conference papers (Japan).
 \item IEEE Signal Processing Society (SPS) Japan Student Journal Paper Award 2017.
-\item Awards an ISCA grant in 2015 for my paper in Interspeech conferences.
-\item Awards a best student prize for master course at NAIST.
-\item Awards a best project prize in Creative and International Competitiveness Project (CICP) 2015 hosted by NAIST.
+\item Awards an ISCA grant in 2015 for my paper at the Interspeech conference 2015.
+\item Awards a best student prize for the master course at NAIST.
+\item Awards a best project prize in the Creative and International Competitiveness Project (CICP) 2015 hosted by NAIST.
 \item Familiar with Kaldi speech recognition, HTS speech synthesis, Moses machine translation toolkits, and deep learning.
 \end{list2}
 
 \section{\sc Computer Skills }
 \begin{list2}
-\item Systems: Linux Operating System, Windows.
-\item Languages: Java, C++, PHP, Python, Shell scripting.
-\item Software development skills: Web, Android, back-ends.
-\item I love programming, and developing toolkits to share my knowledge to others.
+\item Systems: Linux Operating System, Android.
+\item Languages: Java, C++, PHP, Python, Shell scripting, Javascript, and HTML.
+\item Software development skills: web, Android development, back-end processing.
+\item I love programming, and developing toolkits to share my knowledge to others. Check out my software page \url{http://truongdo.com/software/} for more detail.
 \end{list2}
 \section{\sc Foreign Languages}
 \begin{list2}
-\item English: TOEIC 890.
+\item English: TOEIC 910 / 990.
 \item Japanese: Daily-life conversation level.
 \end{list2}
 \section{\sc Study Results}
